unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_AutoUpdate_Log__c/DSCORGPKG__DiscoverOrg_AutoUpdate_Log__c.object-meta.xml
<CustomObject>
    <label>DiscoverOrg AutoUpdate Log</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>DiscoverOrg AutoUpdate Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg AutoUpdate Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>