unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_AutoUpdate_Log__c/fields/DSCORGPKG__Error_Messages__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Error_Messages__c</fullName>
    <label>Error Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>