unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_AutoUpdate_Log__c/fields/DSCORGPKG__Object__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>