unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_AutoUpdate_Log__c/fields/DSCORGPKG__Records_Failed__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Records_Failed__c</fullName>
    <label>Records Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>